# transform-text

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  compose.cpp  compose.hpp  config.cpp  config.h  error.hpp  factory.cpp  factory.hpp  main.cpp  number.hpp  order.hpp  porcessing.cpp  print.cpp  print.hpp  processing.cpp  processing.h  word.hpp
src/lib/include/: compose.h  convert.h  error.h  factory.h  number.h  print.h  word.h
src/lib/src/: compose.cpp  convert.cpp  factory.cpp  print.cpp
test/: CMakeLists.txt  composeTests.cpp  configTests.cpp  convertTests.cpp  factoryTests.cpp  processingTests.cpp  wordsTests.cpp
